2001-12-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSHtml.h: new methods for cleaner indexing.
	* Tools/AGSHtml.m: new methods for cleaner indexing.
	* Tools/AGSParser.m: minor bugfixes.
	* Tools/GNUmakefile: Build autogsdoc documentation using autogsdoc.
	* Tools/autogsdoc.m: Fix minor dependency error.
	* Tools/gsdoc-0_6_7.dtd: Fix ivar support

2001-12-13  Adam Fedor  <fedor@gnu.org>

	* Tools/pl2link.m: New file (from FredKiefer@gmx.de).

2001-12-12  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/NSDebug.h: Include NSDebugLog functions
	when GSDIAGNOSE is defined.

2001-12-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSHTTPURLHandle.m: Remove GSHTPPropertyBodyKey ... make
	the ([writeData:]) method do nothing until the page is reloaded,
	so its behavior is consistent with ([writeProperty:forKey:]) and
	can be used in conjunction with background loading (ie all I/O
	is done during the load).
	* Source/NSURL.m: load resource data after setting it to force I/O

2001-12-11  Manuel Guesdon <mguesdon@orange-concept.com>

	* Source/NSString.m: corrected  bug in +stringByTrimmingSpaces 
		(there was an exception when the string contains only spaces).

2001-12-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/gsdoc/NSDistantObjectRequest.gsdoc: note that the
	class does not exist (and why).

2001-12-08  Gregory Casamento <greg_casamento@yahoo.com>
	* Source/GNUmakefile added SSL_LIB_DIRS += -L$(GNUSTEP_OBJ_DIR)
	to prevent build from failing when building from scratch.
	
2001-12-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAttributedString.m: ([initWithCoder:]) fix typo.

2001-12-07  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/NSDebug.h: Add NSDebugLog functions
	when GSWARN is defined (not DEBUG).

2001-12-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSHTTPURLHandle.m: Understand GSHTPPropertyBodyKey so we
	can set data to be posted in background.

2001-12-06  Richard Frith-Macdonald <rfm@gnu.org>
